--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.12.0"
   }
 }
